build/kubernetes/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: blog
  namespace: website
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: blog
